additional conf line